swagger doc for /buy, refactor database.go
